# Library_Mangement_System

./: .gitignore  CMakeLists.txt  Library_Mangement_System.c  README.md
doc/: 图书管理系统.xmind  实训总结项目.pptx
src/: CMakeLists.txt  README_REFACTOR.md  admin_management.c  admin_management.h  book_management.c  book_management.h  common.h  data_storage.c  data_storage.h  main.c  main_new.c  system_ui.c  system_ui.h  user_management.c  user_management.h  utils.c  utils.h
